--- a/css/style.css
+++ b/css/style.css
@@ -309,3 +309,445 @@ body {
 	}
 
 }
+
+/* ***************************** MAIN-BLOCK SECTION ***************************** */
+
+.popular {}
+
+.popular__container {
+	display: flex;
+	flex-direction: column;
+	row-gap: 48px;
+	justify-content: center;
+	align-items: center;
+}
+
+.popular__title {
+	color: #1B1821;
+	font-family: Roboto;
+	text-transform: uppercase;
+	font-size: 30px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
+}
+
+.popular__cars {
+	display: flex;
+	position: relative;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+.car_1 {
+	z-index: -1;
+	filter: blur(2.5px);
+	margin-right: -175px;
+	width: 342.688px;
+	height: 220px;
+}
+
+.car1__bg {
+	width: 342.688px;
+	height: 220px;
+}
+
+.bg-car1-white {
+	width: 342.688px;
+	height: 220px;
+}
+
+.bg-car1-gray {
+	width: 342.688px;
+	height: 109px;
+	margin-top: -117px;
+}
+
+.car1__content {}
+
+.car1__photo {
+	width: 306.221px;
+	height: 146.108px;
+	margin-top: -193px;
+	margin-left: 18px;
+}
+
+.car1__info {
+	margin-top: -120px;
+	margin-left: 18.81px;
+}
+
+.car1__brand {
+	margin-bottom: 2.6px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 15.712px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
+}
+
+.car1__price {
+	margin-bottom: 2.6px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 13.094px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+
+.car1__description {}
+
+.description-car1 {
+	max-width: 254.014px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 9.165px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: normal;
+}
+
+.description-car1__full-price {
+	margin-bottom: 12px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 7.856px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: normal;
+	text-decoration-line: underline;
+}
+
+.car_2 {
+	filter: blur(1.5px);
+	margin-right: -160px;
+	z-index: -1;
+	width: 432.439px;
+}
+
+.car2__bg {
+	width: 432.439px;
+	height: 284px;
+}
+
+.bg-car2-white {
+	width: 432.439px;
+	height: 284px;
+}
+
+.bg-car2-gray {
+	width: 432.439px;
+	height: 140px;
+	margin-top: -148px;
+}
+
+.car2__content {}
+
+.car2__photo {
+	width: 307.519px;
+	height: 148.883px;
+	margin-top: -246px;
+	margin-left: 63px;
+}
+
+.car2__info {
+	margin-top: -150px;
+	margin-left: 18.81px;
+}
+
+.car2__brand {
+	margin-bottom: 3.5px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 21.41px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
+}
+
+.car2__price {
+	margin-bottom: 3.5px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 17.842px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+
+.car2__description {}
+
+.description-car2 {
+	width: 346px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 10px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: normal;
+}
+
+.description-car2__full-price {
+	margin-bottom: 16px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 10.705px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: normal;
+	text-decoration-line: underline;
+}
+
+.car_3 {
+	width: 510px;
+}
+
+.car__selected {}
+
+.selected-car {}
+
+.selected-car__bg {
+	width: 510px;
+	height: 348px;
+}
+
+.bg-selected-car-white {
+	border-radius: 4px;
+	width: 509.369px;
+	height: 348px;
+}
+
+.bg-selected-car-gray {
+	width: 509.369px;
+	height: 155px;
+	margin-top: -163px;
+}
+
+.selected-car__content {}
+
+.selected-car__photo {
+	width: 470px;
+	height: 209px;
+	margin-top: -330px;
+	margin-left: 20px;
+}
+
+.selected-car__info {
+	margin-left: 18.5px;
+	margin-top: -175px;
+}
+
+.selected-car__brand {
+	margin-bottom: 4px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 24px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
+}
+
+.selected-car__price {
+	margin-bottom: 4px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+
+.selected-car__description {
+	width: 388px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 12px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: normal;
+}
+
+.description-selected-car {}
+
+.description-selected-car__full-price {
+	color: #FFF;
+	font-family: Signika;
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: normal;
+	text-decoration-line: underline;
+	margin-bottom: 15px;
+}
+
+.car_4 {
+	filter: blur(1.5px);
+	z-index: -1;
+	margin-left: -160px;
+	width: 432.439px;
+}
+
+.car4__bg {
+	width: 432.439px;
+	height: 284px;
+}
+
+.bg-car4-white {
+	width: 432.439px;
+	height: 284px;
+}
+
+.bg-car4-gray {
+	width: 432.439px;
+	height: 140px;
+	margin-top: -148px;
+}
+
+.car4__content {}
+
+.car4__photo {
+	width: 386.264px;
+	height: 189.179px;
+	margin-top: -246px;
+	margin-left: 22px;
+}
+
+.car4__info {
+	margin-top: -133px;
+	margin-left: 18.81px;
+}
+
+.car4__brand {
+	color: #FFF;
+	font-family: Signika;
+	font-size: 21.41px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
+}
+
+.car4__price {
+	color: #FFF;
+	font-family: Signika;
+	font-size: 17.842px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+
+.car4__description {}
+
+.description-car4 {
+	width: 346px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 10px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: normal;
+}
+
+.description-car4__full-price {
+	color: #FFF;
+	font-family: Signika;
+	font-size: 10.705px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: normal;
+	text-decoration-line: underline;
+}
+
+.car_5 {
+	filter: blur(2.5px);
+	z-index: -2;
+	margin-left: -175px;
+	width: 342.688px;
+	height: 220px;
+}
+
+.car5__bg {
+	width: 342.688px;
+	height: 220px;
+}
+
+.bg-car5-white {
+	width: 342.688px;
+	height: 220px;
+}
+
+.bg-car5-gray {
+	width: 342.688px;
+	height: 109px;
+	margin-top: -117px;
+}
+
+.car5__content {}
+
+.car5__photo {
+	width: 281.267px;
+	height: 103.848px;
+	margin-top: -180px;
+	margin-left: 30px;
+}
+
+.car5__info {
+	margin-top: -120px;
+	margin-left: 18.81px;
+}
+
+.car5__brand {
+	margin-bottom: 2.6px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 15.712px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
+}
+
+.car5__price {
+	margin-bottom: 2.6px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 13.094px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+
+.car5__description {}
+
+.description-car5 {
+	max-width: 254.014px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 9.165px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: normal;
+}
+
+.description-car5__full-price {
+	margin-bottom: 12px;
+	color: #FFF;
+	font-family: Signika;
+	font-size: 7.856px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: normal;
+	text-decoration-line: underline;
+}
+
+
+.switches-popular {
+	display: flex;
+	flex-direction: row;
+	gap: 16px;
+}
+
+.switches-popular__common {}
+
+.switches-popular__selected {}
