--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ body {
 	font-weight: 400;
 	line-height: normal;
 	margin-bottom: 200px;
+	cursor: pointer;
 }
 
 @media (max-width: 1599.98px) {
@@ -328,7 +329,7 @@ body {
 	text-transform: uppercase;
 	font-size: 30px;
 	font-style: normal;
-	font-weight: 700;
+	font-weight: 900;
 	line-height: normal;
 }
 
@@ -384,7 +385,7 @@ body {
 	font-family: Signika;
 	font-size: 15.712px;
 	font-style: normal;
-	font-weight: 700;
+	font-weight: 900;
 	line-height: normal;
 }
 
@@ -464,7 +465,7 @@ body {
 	font-family: Signika;
 	font-size: 21.41px;
 	font-style: normal;
-	font-weight: 700;
+	font-weight: 900;
 	line-height: normal;
 }
 
@@ -546,7 +547,7 @@ body {
 	font-family: Signika;
 	font-size: 24px;
 	font-style: normal;
-	font-weight: 700;
+	font-weight: 900;
 	line-height: normal;
 }
 
@@ -625,7 +626,7 @@ body {
 	font-family: Signika;
 	font-size: 21.41px;
 	font-style: normal;
-	font-weight: 700;
+	font-weight: 900;
 	line-height: normal;
 }
 
@@ -704,7 +705,7 @@ body {
 	font-family: Signika;
 	font-size: 15.712px;
 	font-style: normal;
-	font-weight: 700;
+	font-weight: 900;
 	line-height: normal;
 }
 
@@ -807,7 +808,7 @@ body {
 	font-family: Roboto;
 	font-size: 30px;
 	font-style: normal;
-	font-weight: 700;
+	font-weight: 900;
 	line-height: normal;
 	letter-spacing: 0.55px;
 	text-transform: uppercase;
@@ -918,7 +919,7 @@ body {
 	font-family: Roboto;
 	font-size: 30px;
 	font-style: normal;
-	font-weight: 700;
+	font-weight: 900;
 	line-height: normal;
 	margin-bottom: 65px
 }
@@ -972,7 +973,7 @@ body {
 	font-family: Signika;
 	font-size: 24px;
 	font-style: normal;
-	font-weight: 700;
+	font-weight: 900;
 	line-height: normal;
 }
 
@@ -1052,7 +1053,7 @@ body {
 	font-family: Roboto;
 	font-size: 30px;
 	font-style: normal;
-	font-weight: 700;
+	font-weight: 900;
 	line-height: normal;
 	letter-spacing: 0.55px;
 	margin-bottom: 48px;
@@ -1070,7 +1071,7 @@ body {
 	font-family: Signika;
 	font-size: 20px;
 	font-style: normal;
-	font-weight: 700;
+	font-weight: 900;
 	line-height: 140%;
 }
 
@@ -1112,12 +1113,13 @@ body {
 }
 
 .left-side__title {
+	text-transform: uppercase;
 	color: #1B1821;
 	text-align: center;
 	font-family: Roboto;
 	font-size: 30px;
 	font-style: normal;
-	font-weight: 700;
+	font-weight: 900;
 	line-height: normal;
 	letter-spacing: 0.55px;
 }
@@ -1200,3 +1202,97 @@ body {
 	width: 791px;
 	height: 377px;
 }
+
+/* ***************************** BUSINESS SECTION ***************************** */
+
+.business {}
+
+.business__container {
+	display: flex;
+	flex-direction: column;
+	gap: 48px;
+	margin-bottom: 200px;
+}
+
+.business__title {
+	color: #1B1821;
+	font-family: Roboto;
+	font-size: 30px;
+	font-style: normal;
+	font-weight: 900;
+	line-height: normal;
+	letter-spacing: 0.55px;
+}
+
+.business__content {
+	display: flex;
+	gap: 50px;
+}
+
+.business__logo {
+	height: 332px;
+}
+
+.description-business {
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+}
+
+.description-business-desc1 {
+	width: 400px;
+	color: #1B1821;
+	font-family: Signika;
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: 140%;
+}
+
+.description-business-desc2 {
+	width: 387px;
+	color: #1B1821;
+	font-family: Signika;
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 140%;
+	/* 28px */
+}
+
+.description-business-desc3 {
+	margin-left: -350px;
+	width: 500px;
+	color: #1B1821;
+	font-family: Signika;
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: 140%;
+}
+
+.description-business-desc3 p {
+
+	display: inline;
+	color: #1B1821;
+	font-family: Signika;
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 140%;
+	/* 28px */
+}
+
+.business__button {
+	cursor: pointer;
+	margin-left: -350px;
+	width: 235px;
+	height: 52px;
+	padding: 16px 24px;
+	border-radius: 4px;
+	background: var(--1, #22ADAA);
+	box-shadow: 11px 13px 28px 0px rgba(0, 0, 0, 0.30);
+	color: #FFF;
+}
+
+/* ***************************** FOOTER SECTION ***************************** */
